tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__AntiMagnetism-AAAAAAAAAAAAAAAAAAAMuw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3259,
  "prerequisites": [
    3258
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you've made a ring of magnetization, you may be getting tired of having to take it off around various Botania systems that require items to be on the ground in order to interact with flowers. The solegnolia is your solution to that. Simply place one down anywhere you don't want items to be automatically put in your inventory, and the ring of magnetization will be disabled while you're in the vicinity of the solegnolia. It doesn't even require mana!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Anti-Magnetism",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3258
  ],
  "rewards": [],
  "tasks": []
}
