tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__Asgardandelion-M7CE2a0uSOSZZsyNloB0zg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12478991764104967374,
  "prerequisites": [
    3231
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A passive mana generating flower that can produce a never-ending torrent of mana.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Asgardandelion",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3231
  ],
  "rewards": [],
  "tasks": []
}
