tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__Botanicinfusion-AAAAAAAAAAAAAAAAAAAMnA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3228,
  "prerequisites": [
    3227,
    238
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The infusion altar will allow you to make runes, which in turn gives you access to progressively more advanced flowers.\n\nTo operate the altar, drop the ingredients on top, whack it with a wand of the forest, and when it's done drop a livingrock block on top to complete the craft. You will additionally need a mana source, such as a mana spreader pointing at it.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Botanic Infusion",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3227,
    238
  ],
  "rewards": [],
  "tasks": []
}
